@@ -3,7 +3,6 @@ package nl.inl.blacklab.resultproperty;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import nl.inl.blacklab.search.BlackLabIndex;
 import nl.inl.blacklab.search.indexmetadata.AnnotatedField;
@@ -26,12 +25,8 @@ public class HitPropertyAlignments extends HitProperty {
         return new HitPropertyAlignments();
     }
 
-    private Hits hits;
-
     HitPropertyAlignments(HitPropertyAlignments prop, Hits hits, boolean invert) {
-        super();
-        this.hits = hits;
-        reverse = prop.reverse ? !invert : invert;
+        super(prop, hits, invert);
     }
 
     private synchronized List<Integer> getTargetHitGroupIndexes() {
@@ -42,7 +37,7 @@ public class HitPropertyAlignments extends HitProperty {
                 // Find indexes of foreign hits in matchInfo
                 targetHitGroupIndexes = hits.matchInfoDefs().currentListFiltered(MatchInfo.Def::isForeignHit).stream()
                         .map(MatchInfo.Def::getIndex)
-                        .collect(Collectors.toList());
+                        .toList();
             } else {
                 targetHitGroupIndexes = Collections.emptyList();
             }
@@ -111,12 +106,11 @@ public class HitPropertyAlignments extends HitProperty {
         if (!super.equals(o))
             return false;
         HitPropertyAlignments that = (HitPropertyAlignments) o;
-        return Objects.equals(targetHitGroupIndexes, that.targetHitGroupIndexes) && Objects.equals(hits,
-                that.hits);
+        return Objects.equals(targetHitGroupIndexes, that.targetHitGroupIndexes);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(super.hashCode(), targetHitGroupIndexes, hits);
+        return Objects.hash(super.hashCode(), targetHitGroupIndexes);
     }
 }
