@@ -10,9 +10,7 @@ import java.util.Map;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
-import org.apache.lucene.document.Document;
 import org.apache.lucene.index.DocValues;
 import org.apache.lucene.index.LeafReader;
 import org.apache.lucene.index.LeafReaderContext;
@@ -26,8 +24,9 @@ import org.apache.lucene.search.Weight;
 import org.apache.lucene.util.Bits;
 
 import nl.inl.blacklab.Constants;
-import nl.inl.blacklab.exceptions.BlackLabRuntimeException;
+import nl.inl.blacklab.exceptions.BlackLabException;
 import nl.inl.blacklab.exceptions.InterruptedSearch;
+import nl.inl.blacklab.exceptions.InvalidIndex;
 import nl.inl.blacklab.resultproperty.DocProperty;
 import nl.inl.blacklab.resultproperty.DocPropertyAnnotatedFieldLength;
 import nl.inl.blacklab.resultproperty.HitProperty;
@@ -37,7 +36,6 @@ import nl.inl.blacklab.resultproperty.PropertyValueDoc;
 import nl.inl.blacklab.resultproperty.PropertyValueInt;
 import nl.inl.blacklab.search.BlackLabIndexAbstract;
 import nl.inl.blacklab.search.indexmetadata.AnnotatedField;
-import nl.inl.blacklab.search.indexmetadata.Field;
 import nl.inl.blacklab.search.lucene.MatchInfoDefs;
 
 /**
@@ -85,7 +83,7 @@ public class DocResults extends ResultsList<DocResult, DocProperty> implements R
             if (results.size() >= Constants.JAVA_MAX_ARRAY_SIZE) {
                 // (NOTE: ArrayList cannot handle more than BlackLab.JAVA_MAX_ARRAY_SIZE entries, and in general,
                 //  List.size() will return Integer.MAX_VALUE if there's more than that number of items)
-                throw new BlackLabRuntimeException("Cannot handle more than " + Constants.JAVA_MAX_ARRAY_SIZE + " doc results");
+                throw new UnsupportedOperationException("Cannot handle more than " + Constants.JAVA_MAX_ARRAY_SIZE + " doc results");
             }
             results.add(DocResult.fromDoc(queryInfo, new PropertyValueDoc(queryInfo.index(), globalDocId), 0.0f, 0));
         }
@@ -230,7 +228,7 @@ public class DocResults extends ResultsList<DocResult, DocProperty> implements R
         if (results.size() >= Constants.JAVA_MAX_ARRAY_SIZE) {
             // (NOTE: ArrayList cannot handle more than BlackLab.JAVA_MAX_ARRAY_SIZE entries, and in general,
             //  List.size() will return Integer.MAX_VALUE if there's more than that number of items)
-            throw new BlackLabRuntimeException("Cannot handle more than " + Constants.JAVA_MAX_ARRAY_SIZE + " doc results");
+            throw new UnsupportedOperationException("Cannot handle more than " + Constants.JAVA_MAX_ARRAY_SIZE + " doc results");
         }
         this.results = results;
         this.sampleParameters = sampleParameters;
@@ -246,7 +244,7 @@ public class DocResults extends ResultsList<DocResult, DocProperty> implements R
         try {
             queryInfo.index().searcher().search(query, new SimpleDocCollector(results, queryInfo));
         } catch (IOException e) {
-            throw BlackLabRuntimeException.wrap(e);
+            throw BlackLabException.wrapRuntime(e);
         }
     }
 
@@ -335,6 +333,7 @@ public class DocResults extends ResultsList<DocResult, DocProperty> implements R
                 ensureResultsReadLock.unlock();
             }
         } catch (InterruptedException e) {
+            Thread.currentThread().interrupt(); // preserve interrupted status
             throw new InterruptedSearch(e);
         }
     }
@@ -343,7 +342,7 @@ public class DocResults extends ResultsList<DocResult, DocProperty> implements R
         if (results.size() >= Constants.JAVA_MAX_ARRAY_SIZE) {
             // (NOTE: ArrayList cannot handle more than BlackLab.JAVA_MAX_ARRAY_SIZE entries, and in general,
             //  List.size() will return Integer.MAX_VALUE if there's more than that number of items)
-            throw new BlackLabRuntimeException("Cannot handle more than " + Constants.JAVA_MAX_ARRAY_SIZE + " doc results");
+            throw new UnsupportedOperationException("Cannot handle more than " + Constants.JAVA_MAX_ARRAY_SIZE + " doc results");
         }
 
         DocResult docResult;
@@ -484,7 +483,7 @@ public class DocResults extends ResultsList<DocResult, DocProperty> implements R
 
     @Override
     public DocResults filter(DocProperty property, PropertyValue value) {
-        List<DocResult> list = stream().filter(g -> property.get(g).equals(value)).collect(Collectors.toList());
+        List<DocResult> list = stream().filter(g -> property.get(g).equals(value)).toList();
         return DocResults.fromList(queryInfo(), list, null, null);
     }
 
@@ -550,7 +549,7 @@ public class DocResults extends ResultsList<DocResult, DocProperty> implements R
                 try {
                     query = query.rewrite(index().reader());
                 } catch (IOException e) {
-                    throw new RuntimeException(e);
+                    throw new InvalidIndex(e);
                 }
 
                 // Fast approach: use the DocValues for the token length field
@@ -573,7 +572,7 @@ public class DocResults extends ResultsList<DocResult, DocProperty> implements R
                                     tokenLengthValuesPerField.put(field.name(), countTokens ? DocValues.getNumeric(reader, field.tokenLengthField()) : null);
                                     tokensPerField.put(field.name(), CorpusSize.Count.create());
                                 } catch (IOException e) {
-                                    throw new RuntimeException(e);
+                                    throw new InvalidIndex(e);
                                 }
                             });
                             while (true) {
@@ -605,7 +604,7 @@ public class DocResults extends ResultsList<DocResult, DocProperty> implements R
                         }
                     }
                 } catch (IOException e) {
-                    throw new RuntimeException("Error determining token count", e);
+                    throw new InvalidIndex("Error determining token count", e);
                 }
             } else {
                 // Slow approach: get the stored field value from each Document
